@@ -1,5 +1,6 @@
 package com.planet_ink.coffee_mud.Abilities.Common;
 import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.interfaces.ItemPossessor.Expire;
 import com.planet_ink.coffee_mud.core.*;
 import com.planet_ink.coffee_mud.core.collections.*;
 import com.planet_ink.coffee_mud.Abilities.interfaces.*;
@@ -98,55 +99,64 @@ public class Butchering extends GatheringSkill
 	{
 		if(canBeUninvoked())
 		{
-			if(affected instanceof MOB)
+			try
 			{
-				final MOB mob=(MOB)affected;
-				if((body!=null)&&(!aborted))
+				if(affected instanceof MOB)
 				{
-					if(failed)
-						commonTell(mob,L("You messed up your butchering completely."));
-					else
-					if(mob.location()!=null)
+					final MOB mob=(MOB)affected;
+					if((body!=null)&&(!aborted))
 					{
-						final CMMsg msg=CMClass.getMsg(mob,body,this,getCompletedActivityMessageType(),
-								L("<S-NAME> manage(s) to skin and chop up <T-NAME>."));
-						msg.setValue(baseYield()+abilityCode());
-						if(mob.location().okMessage(mob, msg))
+						if(failed)
+							commonTell(mob,L("You messed up your butchering completely."));
+						else
+						if(mob.location()!=null)
 						{
-							mob.location().send(mob, msg);
-							final List<RawMaterial> resources=body.charStats().getMyRace().myResources();
-							final ArrayList<Ability> diseases=new ArrayList<Ability>();
-							for(int i=0;i<body.numEffects();i++)
+							final CMMsg msg=CMClass.getMsg(mob,body,this,getCompletedActivityMessageType(),
+									L("<S-NAME> manage(s) to skin and chop up <T-NAME>."));
+							msg.setValue(baseYield()+abilityCode());
+							if(mob.location().okMessage(mob, msg))
 							{
-								final Ability A=body.fetchEffect(i);
-								if((A instanceof DiseaseAffect))
+								mob.location().send(mob, msg);
+								final List<RawMaterial> resources=body.charStats().getMyRace().myResources();
+								final ArrayList<Ability> diseases=new ArrayList<Ability>();
+								for(int i=0;i<body.numEffects();i++)
 								{
-									if((CMath.bset(((DiseaseAffect)A).spreadBitmap(),DiseaseAffect.SPREAD_CONSUMPTION))
-									||(CMath.bset(((DiseaseAffect)A).spreadBitmap(),DiseaseAffect.SPREAD_CONTACT)))
-										diseases.add(A);
-								}
-							}
-							for(int y=0;y<msg.value();y++)
-							{
-								for(int i=0;i<resources.size();i++)
-								{
-									final Item newFound=(Item)((Item)resources.get(i)).copyOf();
-									if((newFound instanceof Food)||(newFound instanceof Drink))
+									final Ability A=body.fetchEffect(i);
+									if((A instanceof DiseaseAffect))
 									{
-										for(int d=0;d<diseases.size();d++)
-											newFound.addNonUninvokableEffect((Ability)diseases.get(d).copyOf());
+										if((CMath.bset(((DiseaseAffect)A).spreadBitmap(),DiseaseAffect.SPREAD_CONSUMPTION))
+										||(CMath.bset(((DiseaseAffect)A).spreadBitmap(),DiseaseAffect.SPREAD_CONTACT)))
+											diseases.add(A);
 									}
-									newFound.recoverPhyStats();
-									if(!dropAWinner(mob,newFound))
+								}
+								mob.location().addItem(body,Expire.Monster_EQ); // just here for a moment.
+								for(int y=0;y<msg.value();y++)
+								{
+									for(int i=0;i<resources.size();i++)
 									{
-										y=9999;
-										break;
+										final Item newFound=(Item)((Item)resources.get(i)).copyOf();
+										if((newFound instanceof Food)||(newFound instanceof Drink))
+										{
+											for(int d=0;d<diseases.size();d++)
+												newFound.addNonUninvokableEffect((Ability)diseases.get(d).copyOf());
+										}
+										newFound.recoverPhyStats();
+										if(!dropAWinner(mob,newFound))
+										{
+											y=9999;
+											break;
+										}
 									}
 								}
 							}
 						}
 					}
 				}
+			}
+			finally
+			{
+				if(body!=null)
+					body.destroy();
 			}
 		}
 		super.unInvoke();
@@ -220,7 +230,8 @@ public class Butchering extends GatheringSkill
 			final int duration=getDuration(mob,I.phyStats().weight());
 			beneficialAffect(mob,mob,asLevel,duration);
 			body.emptyPlease(false);
-			body.destroy();
+			if(body.owner() !=null)
+				body.owner().delItem(body);
 		}
 		return true;
 	}
