@@ -1429,19 +1429,27 @@ internal rejuvenation.
 
 BEHAVIOR_RESOURCEOVERRIDE=\
 Behavior   : ResourceOverride\n\r\
-Targets    : Rooms, Areas\n\r\
-Parameters : min, max ticks, a percent chance, resources and (for areas) room types\n\r\
+Targets    : Rooms, Areas, Mobs\n\r\
+Parameters : (min=x) (max=[ticks]) (chance=[%]) ([RESOURCE]) ([ROOM TYPE])...\n\r\
+Parameters : .. ("item name([RESOURCE] [SUBTYPE])") ("[RESOURCE] [SUBTYPE]")\n\r\
 Example    : MIN=5 MAX=5 CHANCE=100 CORN WHEAT RICE\n\r\
 Example    : CORN WHEAT RICE ROCKY MOUNTAINS PLAINS\n\r\
+Example    : CORN "some weird corn(CORN WIERDCORN)" "CORN WIERDCORN"\n\r\
 Description: \n\r\
 This class allows one to override the normal resources generated by \
-rooms for many common skills.  This skill will randomly select from \
+rooms for many common skills, or by corpses during butchering.  \
+This skill will randomly select from \
 the list enumerated in the parameters instead of the normal list. \
 If this behavior is added to an area, you can add to the parameters \
 a list of room types to apply the new resources to.  Room types include: \
 STONE, WOODEN, CAVE, MAGIC, UNDERWATER, AIR, \
 WATERSURFACE,	METAL, CITY, WOODS, ROCKY, PLAINS, UNDERWATER", \
 AIR, WATERSURFACE, JUNGLE, SWAMP, DESERT, HILLS, MOUNTAINS\n\r\
+\n\r\
+Resource types can be listed by name or their code number.  You can also \
+put a resource type in double-quotes followed by a space and sub-type. \
+Lastly, a custom resource can be made by putting the name in quotation \
+marks followed by the resource type and sub-type in parenthesis. \n\r\
 \n\r\
 When changing the parameters of an existing ResourceOverride on an area, \
 be sure to use RESET AREA to change back any rooms previously affected. 
